Initial commit from Create Next App

--- a/package.json
+++ b/package.json
@@ -1,46 +1,27 @@
 {
-    "name": "highlight-it",
-    "version": "1.0.0",
-    "description": "A simple, engine-agnostic syntax highlighting loader for web pages. Just include one script and you're done.",
-    "homepage": "https://github.com/vespaiach/highlight-it#readme",
-    "bugs": {
-        "url": "https://github.com/vespaiach/highlight-it/issues"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/vespaiach/highlight-it.git"
-    },
-    "license": "MIT",
-    "author": "Trinh Nguyen <nta.toan@gmail.com>",
-    "keywords": [
-        "syntax",
-        "highlighting",
-        "prism",
-        "code",
-        "highlight",
-        "loader"
-    ],
-    "type": "module",
-    "main": "dist/highlight-it.js",
-    "files": [
-        "dist"
-    ],
-    "scripts": {
-        "test": "http-server",
-        "docs": "overmind s",
-        "build": "bun build highlight-it.ts --outfile ./dist/highlight-it.js --target browser --bundle --minify",
-        "prepublishOnly": "bun run build",
-        "type-check": "tsc --noEmit",
-        "type-check:watch": "tsc --noEmit --watch"
-    },
-    "devDependencies": {
-        "@biomejs/biome": "2.3.10",
-        "@tailwindcss/cli": "^4.1.18",
-        "@types/bun": "^1.3.5",
-        "@types/node": "^25.0.3",
-        "daisyui": "^5.5.18",
-        "http-server": "^14.1.1",
-        "tailwindcss": "^4.1.18",
-        "typescript": "^5.9.3"
-    }
+  "name": "highlight-it",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "biome check",
+    "format": "biome format --write"
+  },
+  "dependencies": {
+    "next": "16.1.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  }
 }
